--- a/exhibition.html
+++ b/exhibition.html
@@ -163,10 +163,10 @@
 
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/vantage-point">vantage point</a>
+                <p class="exhibition-title"> <a href="./exhibitions/vantage-point">vantage point,sharjah 10</a>
                 </p>
-                <p class="exhibition-venue">sharjah 10</p>
-                <p class="exhibition-location">sharjah art foundation, uae</p>
+                <p class="exhibition-venue">sharjah art foundation,</p>
+                <p class="exhibition-location">united arab emirates</p>
             </section>
 
             <section class="exhibitions">
@@ -183,7 +183,7 @@
                 </p>
                 <p class="exhibition-venue">metaverse </p>
                 <a class="exhibition-location link" target="_blank" rel="noreferrer"
-                    href="www.oncyber.io/theworldtoday">
+                    href="https://www.oncyber.io/theworldtoday">
                     www.oncyber.io/theworldtoday
                 </a>
 
