--- a/exhibitions/vantage-point.html
+++ b/exhibitions/vantage-point.html
@@ -119,39 +119,26 @@
 
         <section class="jumbotron">
 
-            <p class="exhibition-title"><a href="good-things-come-in-threes"> vantage point, </a>
+            <p class="exhibition-title"><a href="good-things-come-in-threes"> vantage point,sharjah 10 </a>
             </p>
-            <p class="exhibition-venue">sharjah 10,</p>
-            <p class="exhibition-location">sharjah art foundation, uae</p>
+            <p class="exhibition-venue">sharjah art foundation,</p>
+            <p class="exhibition-location">united arab emirates</p>
 
         </section>
 
         <section class="exhibition-images">
 
             <picture class="">
-                <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/1.webp">
-                <img src="../assets/exhibitions/vantage-point/1.webp" alt="vantage point exhibition by neec nonso">
-            </picture>
-
-            <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/2.webp">
                 <img src="../assets/exhibitions/vantage-point/2.webp" alt="vantage point exhibition by neec nonso">
             </picture>
 
-            <picture class="">
-                <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/3.webp">
-                <img src="../assets/exhibitions/vantage-point/3.webp" alt="vantage point exhibition by neec nonso">
-            </picture>
-
+    
             <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/4.webp">
                 <img src="../assets/exhibitions/vantage-point/4.webp" alt="vantage point exhibition by neec nonso">
             </picture>
 
-            <picture class="">
-                <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/5.webp">
-                <img src="../assets/exhibitions/vantage-point/5.webp" alt="vantage point exhibition by neec nonso">
-            </picture>
 
             <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/vantage-point/mobile/6.webp">
