--- a/projects/transcendental-signified.html
+++ b/projects/transcendental-signified.html
@@ -120,31 +120,35 @@
             <h1 class="project-items-words-title">transcendental signified.</h1>
 
             <p class="project-items-words-paragraph">
-                waiting for chineke is a satire of the socio-religio space of the twenty-first century nigerian
-                christian.
+            an integral quality of organic history is one of continuity, an ability to reproduce evolving systems of being. the
+            present is conceived as an unfolding product of the past, simultaneously experienced and archived in forms as event and
+            memory. an observation of the now is thus foregrounded against a landscape of afterlives and replication. this
+            rootedness of the present in ideas of descendancy forms a core aspect of transcendental signified. the body is
+            considered across time and worlds, drawing connections between the spectral and corporeal. writer zoë hopkins describes
+            living as ‘an experience of encountering, remembering, and listening to the dead’. in this body of work, i blur the
+            lines between the living and the dead, presenting bodies in a non-linear performance of continuity.
+            
 
-                the project title is inspired by irish playwright and novelist samuel beckett's waiting for godot. this
-                play, unarguably
-                a theatre of the absurd first theatrical success, is a two act tragi-comedy play that consists of
-                conversations between
-                vladimir and estragon, who are waiting for the arrival of the mysterious godot, who continually sends
-                word
-                that he will
-                appear but who never does.
 
             </p>
 
             <p class="project-items-words-paragraph">
 
-                but my subject matter is drawn from my weekly experience with my father’s church. my father was a
-                prophet
-                and clergyman
-                of love and faith gospel ministry; a penticostal church like a lot others that dots the streets of lagos
-                and
-                nigeria.
-                this brand of christianity prophesies doom, teaches their members to follow christ and wait upon him cos
-                ‘jesus is
-                coming very soon’.
+            building on my earlier series ‘what was dead was never dead’ i present work spanning still images, augmented reality,
+            installation, sound and performance. set against rural, vegetative scenes, images of multiple often translucent bodies —
+            mostly of me — are arranged uniformly around a central subject, as if posed for a camera. this visual duplication
+            positions my body as a site for unraveling notions of memory, lineage and reincarnation, as well as rituals of life,
+            death and the afterworld. combining my body with portraits of individuals i met during my research travels, i assume an
+            ancestral and otherworldly state, initiating a dialogue with family histories as well as sites of memory and
+            remembrance. vestiges of the past layered onto the fabric of the present.
+            </p>
+
+            <p class="project-items-words-paragraph">
+                in transcendental signified, the built space becomes a witness to the passing of time, its continued existence serving
+                to contain the stories of impermanent bodies. a space that holds presence and memory. these buildings and landscapes
+                also serve as scenes for duality, one situated between planes of existence. from the concrete to the ethereal. mining
+                personal experiences and research across places and perspectives, i narrate intimate family stories and histories,
+                imagining the present body as an embodiment of all that has come before. an ode to departure and continuance.
             </p>
 
         </div>
