--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  
 
 
-        <a class="home-btn" href="./bio">learn more</a>
+        <a class="home-btn" href="./projects">5555555555</a>
 
     </div>
 
