--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
 
     <!-- Start of Project-->
 
-    <div class="container">
+    <div class="quote-container">
 
         <div class="blockquote-div">
             <blockquote>
@@ -131,7 +131,7 @@
 
             <div class="card">
                 <a href="./projects/theboysfraternity">
-                    <img loading="lazy" class="card-image" src="./assets/projects/the boys fraternity/Mobile/project.webp"
+                    <img loading="lazy" class="card-image"  src="./assets/projects/the boys fraternity/Mobile/project.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theboysfraternity">
