--- a/exhibitions/boundariesofreason.html
+++ b/exhibitions/boundariesofreason.html
@@ -126,17 +126,17 @@
             <img class="boundariesofreason" name="slide" />
             <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/boundaries-of-reason/mobile/2.webp">
-                <img src="../assets/exhibitions/boundaries-of-reason/2.webp"
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/3_blaize_itodo_sgo33d.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
             <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/boundaries-of-reason/mobile/3.webp">
-                <img src="../assets/exhibitions/boundaries-of-reason/3.webp"
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/2_blaize_itodo_tbcv9f.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
             <picture class="">
                 <source media="(max-width: 500px)" srcset="../assets/exhibitions/boundaries-of-reason/mobile/4.webp">
-                <img src="../assets/exhibitions/boundaries-of-reason/4.webp"
+                <img src="https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/4_blaize_itodo_xnjxyr.jpg"
                     alt="nigeria trending lagos fringe by neec nonso">
             </picture>
         </section>
@@ -175,8 +175,8 @@
         }
 
         var images3 = [
-            "../assets/exhibitions/boundaries-of-reason/5.webp",
-            "../assets/exhibitions/boundaries-of-reason/1.webp",
+            "https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/1_rgal66.jpg",
+            "https://res.cloudinary.com/da93q413z/image/upload/v1669878555/boundaries-of-reason/5_gvf1yy.jpg",
         ];
 
         function changeImg3() {
