--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
         <div class="contact-container">
 
             <div class="contact-image-container">
-                <img class="contact-image" src="assets/contact-photo.webp   " alt="contact photo">
+                <img class="contact-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/contact-photo_tarhka.webp" alt="contact photo">
             </div>
 
             <div class="contact-words-container">
@@ -166,7 +166,6 @@
         <p>built with rage by <a rel='noreferrer noopener' target='_blank' class="creator-link"
                 href="https://www.pixelsinframe.com/">pixelsinframe.com</a></p>
     </footer>
-
 
     <!-- End of Footer -->
 
