--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,7 @@
     <div class="header">
 
         <nav class='navbar'>
+
             <a class="logo-link" href='/'>
                 <img loading="lazy"
                     src="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/neec-nonso-logo_l0wjup.png"
@@ -77,6 +78,7 @@
                 </li>
 
             </ul>
+
             <div class="menu">
                 <div class="menu-line1"></div>
                 <div class="menu-line2"></div>
@@ -143,7 +145,7 @@
             <div class="card">
                 <a href="./projects/theboysfraternity">
                     <img loading="lazy" class="card-image"
-                        src="./assets/projects/the boys fraternity/Mobile/project.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/project_ov3xmf.webp" alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theboysfraternity">
                     <p class="project-title">the boys fraternity.</p>
@@ -152,7 +154,7 @@
 
             <div class="card">
                 <a href="./projects/thelastburial">
-                    <img loading="lazy" class="card-image" src="./assets/projects/the last burial/Mobile/1.webp"
+                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/thelastburial">
@@ -163,7 +165,7 @@
             <div class="card">
                 <a href="./projects/whatwasdeadwasneverdead">
                     <img loading="lazy" class="card-image"
-                        src="./assets/projects/what was dead was never dead/Mobile/1.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp" alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/whatwasdeadwasneverdead">
                     <p class="project-title">what was dead was never dead.</p>
@@ -172,7 +174,7 @@
 
             <div class="card">
                 <a href="./projects/christmasandclothes">
-                    <img loading="lazy" class="card-image" src="../assets/projects/christmas-and-clothes/1.webp"
+                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/christmasandclothes">
@@ -205,7 +207,7 @@
             <div class="card">
                 <a href="./projects/theanotherbeginning">
                     <img loading="lazy" class="card-image"
-                        src="./assets/projects/the another beginning/350px Jpeg/1.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp" alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theanotherbeginning">
                     <p class="project-title">the another beginning.</p>
@@ -214,7 +216,7 @@
 
             <div class="card">
                 <a href="./projects/toiletintoiletout">
-                    <img loading="lazy" class="card-image" src="./assets/projects/toilet in, toilet out/Mobile/2.webp"
+                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/toiletintoiletout">
@@ -224,7 +226,7 @@
 
             <div class="card">
                 <a href="./projects/waitingforchineke">
-                    <img loading="lazy" class="card-image" src="./assets/projects/waiting for chineke/Mobile /1.webp"
+                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/waitingforchineke">
@@ -234,7 +236,7 @@
 
             <div class="card">
                 <a href="./projects/pain-a-discomfort-or-a-trigger">
-                    <img loading="lazy" class="card-image" src="./assets/projects/pain a discomfort/mobille350px.webp"
+                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/mobille350px_igyed6.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
