--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
         <div class="contact-container">
 
             <div class="contact-image-container">
-                <img class="contact-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/contact-photo_tarhka.webp" alt="contact photo">
+                <img loading="lazy" class="contact-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669907059/bio/contact-photo_tarhka.webp" alt="contact photo">
             </div>
 
             <div class="contact-words-container">
