--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -136,32 +136,12 @@
             <h1 class="project-items-words-title">christmas and clothes.</h1>
 
             <p class="project-items-words-paragraph">
-                as a child growing up in south-east nigeria, my most cherished childhood memories are the ones
-                thathappen
-                during the
-                christmas season. it is the period where the children are allowed to visit friends andfamilies adorned
-                with
-                special
-                dresses bought by their parents for the festivities. while the period isladen with gifts exchanged
-                amongst
-                families,
-                friends, and neighbours, the children are transformed intosome sort of models as they brandish their new
-                outfits and
-                pose with the toys.
+                as a child growing up in south-east nigeria, my most cherished childhood memories are the ones that happen during the christmas season. it is the period where the children are allowed to visit friends andfamilies adorned with special dresses bought by their parents for the festivities. while the period isladen with gifts exchanged amongst families, friends, and neighbours, the children are transformed intosome sort of models as they brandish their new outfits and pose with the toys.
 
             </p>
 
             <p class="project-items-words-paragraph">
-
-                christmas and clothes is an ongoing project; a portrait series of kids in omor of
-                eastern nigeria,
-                wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i
-                am
-                reflecting on
-                childhood memories by examining what is popular amongst youngsters celebrating christmas, and
-                interrogating
-                on a deeper
-                scale - the universality of celebration which cuts across social classes.
+             christmas and clothes is an ongoing project; a portrait series of kids in omor of eastern nigeria, wearing their christmas outfits, and holding their christmas toys, with poses resembling movie stars. i am reflecting on childhood memories by examining what is popular amongst youngsters celebrating christmas, and             interrogating on a deeper scale - the universality of celebration which cuts across social classes.
             </p>
 
         </div>
