--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -187,23 +187,24 @@
                     <ul class="carousel-track">
 
                         <li class="carousel-slide current-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--1.webp"
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--1_rk6pkd.webp"
                                 alt=" Temple Image" loading=""></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--2.webp"
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--2_dayek7.webp"
                                 alt=" Temple Image" loading=""></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--3.webp"
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--3_n5aoda.webp"
                                 alt=" Temple Image" loading=""></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--4.webp"
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--4_ox3722.webp"
                                 alt=" Temple Image" loading=""></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--5.webp"
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904310/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--5_f3u9ca.webp"
                                 alt=" Temple Image" loading=""></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/what was dead was never dead/tinified/neec.nonso--6.webp"
-                                alt=" Temple Image" loading=""></li>
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904311/Projects/what%20was%20dead%20was%20never%20dead/neec.nonso--6_uywir1.webp"
+                                alt=" Temple Image" loading="">
+                            </li>
 
                     </ul>
 
