--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@
             <div class="card">
                 <a href="./projects/howtophotographylagostwo">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669909041/Projects/howtophotographylagos/mobile/neec.nonso_-_3_coj8vy.webp"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669909042/Projects/howtophotographylagos/mobile/neec.nonso_-_6_c38wnr.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/howtophotographylagostwo">
