--- a/projects/waitingforchineke.html
+++ b/projects/waitingforchineke.html
@@ -185,7 +185,7 @@
                                 src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/2b_ommjti.webp"
                                 alt="waitingforchineke"></li>
                         <li class="carousel-slide"><img class="carousel-image"
-                                src="../assets/projects/waiting for chineke/1200px Jpeg/3.webp" alt="waitingforchineke">
+                                src="https://res.cloudinary.com/da93q413z/image/upload/v1669904219/Projects/waiting%20for%20chineke/3_vaxvzg.webp" alt="waitingforchineke">
                         </li>
                         <li class="carousel-slide"><img class="carousel-image"
                                 src="https://res.cloudinary.com/da93q413z/image/upload/v1669904220/Projects/waiting%20for%20chineke/4_qrtvgy.webp" alt="waitingforchineke">
