--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -215,8 +215,6 @@
                         alt="arrow forward button">
                 </button>
 
-
-
             </div>
 
             <div class="carousel-nav">
@@ -232,17 +230,17 @@
 
         <div class="project-items-mobile-images">
 
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/1.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/1_sbcsb8.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/2.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/3.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/3_rfu4hc.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/4.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/4_jyl8sw.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/5.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/5_wn5rk5.webp"
                 alt="what was dead was never dead images">
-            <img class="mobile-images" src="../assets/projects/what was dead was never dead/Mobile/6.webp"
+            <img class="mobile-images" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904321/Projects/what%20was%20dead%20was%20never%20dead/mobile/6_caobne.webp"
                 alt="what was dead was never dead images">
 
         </div>
@@ -266,7 +264,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
 
-
+     <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
 </body>
 
