--- a/alternate.html
+++ b/alternate.html
@@ -9,7 +9,8 @@
     <title> homepage | neec nonso | visual artist</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png"
+        href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
     <meta name="description"
