--- a/page-not-found.html
+++ b/page-not-found.html
@@ -7,7 +7,8 @@
     <title> page not found | neec nonso | visual artist</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png"
+        href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
     <meta name="description"
@@ -22,7 +23,8 @@
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
     <meta property="og:url" content="http://neecnonso.com" />
-    <meta property="og:image" content="assets/icons/ogimage.png" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
@@ -31,7 +33,8 @@
     <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-    <meta name="twitter:image" content="assets/icons/ogimage.png" />
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
     <!-- Style Links -->
 
@@ -59,7 +62,9 @@
                 <h1 class="error-page-title">404 and corrupted memory card</h1>
                 <p class="error-page-title"> page not found </p>
             </div>
-            <img class="errorimage" src="https://res.cloudinary.com/da93q413z/image/upload/v1669913437/bio/404_fhpihh.png" alt="error page image">
+            <img class="errorimage"
+                src="https://res.cloudinary.com/da93q413z/image/upload/v1669913437/bio/404_fhpihh.png"
+                alt="error page image">
             <a class="css-button-arrow--black " href="/"> return home</a>
         </section>
     </div>
