--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> projects | neec nonso | visual artist</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png"
+        href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
     <meta name="description"
@@ -22,7 +23,8 @@
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
     <meta property="og:url" content="https://www.neecnonso.com/projects" />
-    <meta property="og:image" content="assets/icons/ogimage.png" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
@@ -31,7 +33,8 @@
     <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-    <meta name="twitter:image" content="assets/icons/ogimage.png" />
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
     <!-- Style Links -->
 
@@ -145,7 +148,8 @@
             <div class="card">
                 <a href="./projects/theboysfraternity">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/project_ov3xmf.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904111/Projects/the%20boys%20fraternity/mobile/project_ov3xmf.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theboysfraternity">
                     <p class="project-title">the boys fraternity.</p>
@@ -154,7 +158,8 @@
 
             <div class="card">
                 <a href="./projects/thelastburial">
-                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669906025/Projects/the%20last%20burial/mobile/1_qcb3ze.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/thelastburial">
@@ -165,7 +170,8 @@
             <div class="card">
                 <a href="./projects/whatwasdeadwasneverdead">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904322/Projects/what%20was%20dead%20was%20never%20dead/mobile/2_f5dit3.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/whatwasdeadwasneverdead">
                     <p class="project-title">what was dead was never dead.</p>
@@ -174,7 +180,8 @@
 
             <div class="card">
                 <a href="./projects/christmasandclothes">
-                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669895106/Projects/christmas-and-clothes/mobile/1_kzrq5s.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/christmasandclothes">
@@ -207,7 +214,8 @@
             <div class="card">
                 <a href="./projects/theanotherbeginning">
                     <img loading="lazy" class="card-image"
-                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp" alt="projects-image">
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669901305/Projects/the%20another%20beginning/mobile/2_szruv9.webp"
+                        alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/theanotherbeginning">
                     <p class="project-title">the another beginning.</p>
@@ -216,7 +224,8 @@
 
             <div class="card">
                 <a href="./projects/toiletintoiletout">
-                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904148/Projects/toilet%20in%2C%20toilet%20out/mobile/9_cueueb.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/toiletintoiletout">
@@ -226,7 +235,8 @@
 
             <div class="card">
                 <a href="./projects/waitingforchineke">
-                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669904228/Projects/waiting%20for%20chineke/mobile/2b_etfmdo.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/waitingforchineke">
@@ -236,7 +246,8 @@
 
             <div class="card">
                 <a href="./projects/pain-a-discomfort-or-a-trigger">
-                    <img loading="lazy" class="card-image" src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/mobille350px_igyed6.webp"
+                    <img loading="lazy" class="card-image"
+                        src="https://res.cloudinary.com/da93q413z/image/upload/v1669896744/Projects/pain%20a%20discomfort/mobille350px_igyed6.webp"
                         alt="projects-image">
                 </a>
                 <a class="card-description" href="./projects/pain-a-discomfort-or-a-trigger">
