--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title> homepage | neec nonso | visual artist</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png"
+        href="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/favicon_j4hvqa.png">
 
     <meta name="robots" content="index, follow">
     <meta name="description"
@@ -24,7 +25,8 @@
     <meta property="og:title" content="homepage | neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist">
     <meta property="og:url" content="http://neecnonso.com" />
-    <meta property="og:image" content="assets/icons/ogimage.png" />
+    <meta property="og:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
@@ -33,7 +35,8 @@
     <meta name="twitter:site" content="@neecnonso" />
     <meta name="twitter:title" content="neec nonso | visual artist">
     <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-    <meta name="twitter:image" content="assets/icons/ogimage.png" />
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/da93q413z/image/upload/v1669879856/icons/ogimage_r9q3lw.png" />
 
 
     <!-- Style Links 
@@ -73,8 +76,6 @@
 
     </div>
 
-
-
     <!-- Start of Footer -->
 
     <footer class="footer-container">
@@ -90,8 +91,6 @@
 
 
     <script>
-
-
 
 
         function randombg() {
@@ -116,10 +115,14 @@
                 "url('https://res.cloudinary.com/da93q413z/image/upload/v1669879218/homepage/5_xcd13b.webp')",
             ];
             document.getElementById("random").style.backgroundImage = backgroundImages[random];
+
+
         }
 
 
         setInterval(randombg, 2000)
+
+
     </script>
     <!-- <script src="countdown.js" async defer></script> -->
 </body>
