--- a/exhibition.html
+++ b/exhibition.html
@@ -251,7 +251,7 @@
             </section>
 
             <section class="exhibitions">
-                <p class="exhibition-title"> <a href="./exhibitions/relebootcampexhibition.html">rele
+                <p class="exhibition-title"> <a href="./exhibitions/relebootcampexhibition">rele
                         boot
                         camp
                         <br>
