--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -228,8 +228,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
-
+     <script src="../script.js" async defer></script>
     <script src="../scripts/projects.js" async defer></script>
+    
 </body>
 
 </html>
